sys/compat/linuxkpi/common/src/linux_i2cbb.c
@@ -41,6 +41,7 @@ __FBSDID("$FreeBSD$");
 #include <linux/list.h>
 #include <linux/pci.h>
 
+#include "iicbus_if.h"
 #include "iicbb_if.h"
 #include "lkpi_iic_if.h"
 
@@ -49,11 +50,34 @@ static void lkpi_iicbb_setscl(device_t dev, int val);
 static int lkpi_iicbb_getscl(device_t dev);
 static int lkpi_iicbb_getsda(device_t dev);
 static int lkpi_iicbb_reset(device_t dev, u_char speed, u_char addr, u_char *oldaddr);
+static int lkpi_iicbb_pre_xfer(device_t dev);
+static void lkpi_iicbb_post_xfer(device_t dev);
 
 struct lkpi_iicbb_softc {
 	device_t		iicbb;
 	struct i2c_adapter	*adapter;
 };
+
+static struct sx lkpi_sx_i2cbb;
+
+static void
+lkpi_sysinit_i2cbb(void *arg __unused)
+{
+
+	sx_init(&lkpi_sx_i2cbb, "lkpi-i2cbb");
+}
+
+static void
+lkpi_sysuninit_i2cbb(void *arg __unused)
+{
+
+	sx_destroy(&lkpi_sx_i2cbb);
+}
+
+SYSINIT(lkpi_i2cbb, SI_SUB_DRIVERS, SI_ORDER_ANY,
+    lkpi_sysinit_i2cbb, NULL);
+SYSUNINIT(lkpi_i2cbb, SI_SUB_DRIVERS, SI_ORDER_ANY,
+    lkpi_sysuninit_i2cbb, NULL);
 
 static int
 lkpi_iicbb_probe(device_t dev)
@@ -93,10 +117,17 @@ static int
 lkpi_iicbb_add_adapter(device_t dev, struct i2c_adapter *adapter)
 {
 	struct lkpi_iicbb_softc *sc;
+	struct i2c_algo_bit_data *algo_data;
 
 	sc = device_get_softc(dev);
 	sc->adapter = adapter;
 
+	/*
+	 * Set iicbb timing parameters deriving speed from the protocol delay.
+	 */
+	algo_data = adapter->algo_data;
+	if (algo_data->udelay != 0)
+		IICBUS_RESET(sc->iicbb, 1000000 / algo_data->udelay, 0, NULL);
 	return (0);
 }
 
@@ -123,6 +154,8 @@ static device_method_t lkpi_iicbb_methods[] = {
 	DEVMETHOD(iicbb_getsda,		lkpi_iicbb_getsda),
 	DEVMETHOD(iicbb_getscl,		lkpi_iicbb_getscl),
 	DEVMETHOD(iicbb_reset,		lkpi_iicbb_reset),
+	DEVMETHOD(iicbb_pre_xfer,	lkpi_iicbb_pre_xfer),
+	DEVMETHOD(iicbb_post_xfer,	lkpi_iicbb_post_xfer),
 
 	/* lkpi_iicbb interface */
 	DEVMETHOD(lkpi_iic_add_adapter,	lkpi_iicbb_add_adapter),
@@ -137,9 +170,10 @@ driver_t lkpi_iicbb_driver = {
 	sizeof(struct lkpi_iicbb_softc),
 };
 
-DRIVER_MODULE(lkpi_iicbb, lkpi_iic, lkpi_iicbb_driver, 0, 0);
+DRIVER_MODULE(lkpi_iicbb, drmn, lkpi_iicbb_driver, 0, 0);
+DRIVER_MODULE(lkpi_iicbb, drm, lkpi_iicbb_driver, 0, 0);
 DRIVER_MODULE(iicbb, lkpi_iicbb, iicbb_driver, 0, 0);
-MODULE_DEPEND(lkpi_iicbb, iicbb, IICBB_MINVER, IICBB_PREFVER, IICBB_MAXVER);
+MODULE_DEPEND(linuxkpi, iicbb, IICBUS_MINVER, IICBUS_PREFVER, IICBUS_MAXVER);
 
 static void
 lkpi_iicbb_setsda(device_t dev, int val)
@@ -148,10 +182,8 @@ lkpi_iicbb_setsda(device_t dev, int val)
 	struct i2c_algo_bit_data *algo_data;
 
 	sc = device_get_softc(dev);
-	algo_data = (struct i2c_algo_bit_data *)sc->adapter->algo_data;
+	algo_data = sc->adapter->algo_data;
 	algo_data->setsda(algo_data->data, val);
-	cpu_spinwait();
-	DELAY(algo_data->udelay);
 }
 
 static void
@@ -161,11 +193,8 @@ lkpi_iicbb_setscl(device_t dev, int val)
 	struct i2c_algo_bit_data *algo_data;
 
 	sc = device_get_softc(dev);
-
-	algo_data = (struct i2c_algo_bit_data *)sc->adapter->algo_data;
+	algo_data = sc->adapter->algo_data;
 	algo_data->setscl(algo_data->data, val);
-	cpu_spinwait();
-	DELAY(algo_data->udelay);
 }
 
 static int
@@ -173,27 +202,11 @@ lkpi_iicbb_getscl(device_t dev)
 {
 	struct lkpi_iicbb_softc *sc;
 	struct i2c_algo_bit_data *algo_data;
-	unsigned long orig_ticks;
-	int ret = 0;
+	int ret;
 
 	sc = device_get_softc(dev);
-
-	algo_data = (struct i2c_algo_bit_data *)sc->adapter->algo_data;
-
-	orig_ticks = ticks;
-	while (!ret) {
-		ret = algo_data->getscl(algo_data->data);
-
-		if (ret)
-			break;
-
-		if (ticks > orig_ticks + algo_data->timeout)
-			return (ETIMEDOUT);
-
-		cpu_spinwait();
-		DELAY(algo_data->udelay);
-	}
-	DELAY(algo_data->udelay);
+	algo_data = sc->adapter->algo_data;
+	ret = algo_data->getscl(algo_data->data);
 	return (ret);
 }
 
@@ -202,16 +215,11 @@ lkpi_iicbb_getsda(device_t dev)
 {
 	struct lkpi_iicbb_softc *sc;
 	struct i2c_algo_bit_data *algo_data;
-	int ret = 0;
+	int ret;
 
 	sc = device_get_softc(dev);
-	algo_data = (struct i2c_algo_bit_data *)sc->adapter->algo_data;
-
-	cpu_spinwait();
-	DELAY(algo_data->udelay);
+	algo_data = sc->adapter->algo_data;
 	ret = algo_data->getsda(algo_data->data);
-	cpu_spinwait();
-	DELAY(algo_data->udelay);
 	return (ret);
 }
 
@@ -219,15 +227,79 @@ static int
 lkpi_iicbb_reset(device_t dev, u_char speed, u_char addr, u_char *oldaddr)
 {
 
+	/* That doesn't seems to be supported in linux */
 	return (0);
 }
 
-int
-lkpi_i2cbb_transfer(struct i2c_adapter *adapter, struct i2c_msg *msgs, int nmsgs)
+static int
+lkpi_iicbb_pre_xfer(device_t dev)
 {
+	struct lkpi_iicbb_softc *sc;
+	struct i2c_algo_bit_data *algo_data;
+	int rc = 0;
 
-	/* TODO: convert from i2c_msg to iic_msg and call IICBUS_TRANFER */
-	return (0);
+	sc = device_get_softc(dev);
+	algo_data = sc->adapter->algo_data;
+	if (algo_data->pre_xfer != 0)
+		rc = algo_data->pre_xfer(sc->adapter);
+	return (rc);
+}
+
+static void
+lkpi_iicbb_post_xfer(device_t dev)
+{
+	struct lkpi_iicbb_softc *sc;
+	struct i2c_algo_bit_data *algo_data;
+
+	sc = device_get_softc(dev);
+	algo_data = sc->adapter->algo_data;
+	if (algo_data->post_xfer != NULL)
+		algo_data->post_xfer(sc->adapter);
+}
+
+int
+lkpi_i2cbb_transfer(struct i2c_adapter *adapter, struct i2c_msg *msgs,
+    int nmsgs)
+{
+	struct iic_msg *bsd_msgs;
+	int ret = ENXIO;
+
+	linux_set_current(curthread);
+
+	bsd_msgs = malloc(sizeof(struct iic_msg) * nmsgs,
+	    M_DEVBUF, M_WAITOK | M_ZERO);
+
+	for (int i = 0; i < nmsgs; i++) {
+		bsd_msgs[i].slave = msgs[i].addr << 1;
+		bsd_msgs[i].len = msgs[i].len;
+		bsd_msgs[i].buf = msgs[i].buf;
+		if (msgs[i].flags & I2C_M_RD)
+			bsd_msgs[i].flags |= IIC_M_RD;
+		if (msgs[i].flags & I2C_M_NOSTART)
+			bsd_msgs[i].flags |= IIC_M_NOSTART;
+	}
+
+	for (int unit = 0; ; unit++) {
+		device_t child;
+		struct lkpi_iicbb_softc *sc;
+
+		child = device_find_child(adapter->dev.parent->bsddev,
+		    "lkpi_iicbb", unit);
+		if (child == NULL)
+			break;
+		if (adapter == LKPI_IIC_GET_ADAPTER(child)) {
+			sc = device_get_softc(child);
+			ret = IICBUS_TRANSFER(sc->iicbb, bsd_msgs, nmsgs);
+			ret = iic2errno(ret);
+			break;
+		}
+	}
+
+	free(bsd_msgs, M_DEVBUF);
+
+	if (ret != 0)
+		return (-ret);
+	return (nmsgs);
 }
 
 int
@@ -239,19 +311,24 @@ lkpi_i2c_bit_add_bus(struct i2c_adapter *adapter)
 	if (bootverbose)
 		device_printf(adapter->dev.parent->bsddev,
 		    "Adding i2c adapter %s\n", adapter->name);
+	sx_xlock(&lkpi_sx_i2cbb);
 	lkpi_iicbb = device_add_child(adapter->dev.parent->bsddev, "lkpi_iicbb", -1);
 	if (lkpi_iicbb == NULL) {
 		device_printf(adapter->dev.parent->bsddev, "Couldn't add lkpi_iicbb\n");
+		sx_xunlock(&lkpi_sx_i2cbb);
 		return (ENXIO);
 	}
 
+	bus_topo_lock();
 	error = bus_generic_attach(adapter->dev.parent->bsddev);
+	bus_topo_unlock();
 	if (error) {
 		device_printf(adapter->dev.parent->bsddev,
 		  "failed to attach child: error %d\n", error);
+		sx_xunlock(&lkpi_sx_i2cbb);
 		return (ENXIO);
 	}
 	LKPI_IIC_ADD_ADAPTER(lkpi_iicbb, adapter);
+	sx_xunlock(&lkpi_sx_i2cbb);
 	return (0);
 }
-
